EV-189 - fixed overflow scroll for sidebar menu

--- a/src/shared/ui/components/LayoutComponent/LayoutComponent.scss
+++ b/src/shared/ui/components/LayoutComponent/LayoutComponent.scss
@@ -7,7 +7,10 @@
 
   > div {
     max-height: 100vh;
-    overflow: auto;
+
+    > main {
+      overflow: auto;
+    }
   }
 
   &__logo-button-block {
@@ -30,7 +33,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 87%;
+    height: 83%;
   }
 
   &__header-block {
